[Periscope] - Alter responsive media query to affect CNX UI pages only. Fixing problem in EE where content is too wide (800px or more).

--- a/scss/global/_responsive.scss
+++ b/scss/global/_responsive.scss
@@ -1,4 +1,4 @@
-body:not(.cke_editable),
+body.lotusui:not(.cke_editable),
 body.meetingBody:not(.cke_editable),
 .lotusui30_body .lotusFrame,
 .lotusui30_body .lotusMain,
